  - (zathor) [x264ConfigurationPanel] added the missing update events to some settings
  - (zathor) [x264ConfigurationPanel] enhanced command line generating for main/baseline profile
  - (zathor) [FileIndexer] disabled MKV indexing with DGAVCDec. Bug #3024329
  - (zathor) [FileIndexer] DGIndexNV is only available if license.txt is found

0.3.5.0
  Main changes:
  - simplified x264 profiles and the main x264 configuration page. Only the 
    target/playback device of the encoding will be selected with the default
    profile. The encoding mode and quality will be selected automatically or
    can be defined manually.
  - if targeting file size in AutoEncode or One-Click the encoding mode of the
    selected video profile will be switched temporarily to automated 2/3pass
    The AutoEncode defaults can be changed in the settings
  - if applying a bitrate in the bitrate calculator the encoding mode of the 
    selected video profile will be switched on request permanently 
    to automated 2/3pass
  - only one concurrent audio encoding is allowed
  - renamed "DG Creator" to "File Indexer" and improved the File Indexer
  - added FFMS (FFmpegSource2) to the File Indexer
  - improved Bitrate Calculator. Patch by JarrettV (#2999751)

  Other changes:
  - [AviSynthWindow] + [AviSynthProfileConfigPanel] + [Changelog] 
    changed font to Courier New
  - [MeGUISettings] defaults to development update server 
    if development build is used
  - [VideoUtil] + [MainForm] fixed the detection of AviSynth for MeGUI x64
  - [MkvMergeMuxer] removed --no-clusters-in-meta-seek because of the change 
    in MkvToolNix 4.0.0
  - [WindowUtil] + [JobWorkerWindow] prevent standby while a job is running. 
    Feature request #2976205
  - [MainForm] fixed window size will be reset if window is minimized
  - moved CustomFileSize, CustomFPSs, CustomDARs and GUI settings from 
    user.config into settings.xml
  - user.config is no longer created / updated. Therefore MeGUI itself does not